--- a/styles/common.css
+++ b/styles/common.css
@@ -317,3 +317,10 @@ td.k-state-focused.k-state-selected {
 .k-button:focus:active:not(.k-state-disabled):not([disabled]) {
     box-shadow: none;
 }
+.k-dropdown .k-input,
+.k-dropdown .k-state-focused .k-input,
+.k-menu .k-popup,
+.k-multiselect .k-button,
+.k-multiselect .k-button:hover {
+    color: white;
+}
