--- a/styles/common.css
+++ b/styles/common.css
@@ -215,9 +215,18 @@ body {
 .noEditHead td {
     text-align: center;
 }
-
-
-/* kendoui css set */
+/* tabstrip 高度100% */
+#tabstrip-parent {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    border-width: 0;
+}
+    #tabstrip-parent .k-content {
+        position: relative;
+        padding: 0;
+}
+/* kendoui css set begin */
 
 .k-alt,
 .k-pivot-layout>tbody>tr:first-child>td:first-child,
@@ -317,10 +326,9 @@ td.k-state-focused.k-state-selected {
 .k-button:focus:active:not(.k-state-disabled):not([disabled]) {
     box-shadow: none;
 }
-.k-dropdown .k-input,
-.k-dropdown .k-state-focused .k-input,
 .k-menu .k-popup,
 .k-multiselect .k-button,
 .k-multiselect .k-button:hover {
     color: white;
 }
+/* kendoui css set end */
